--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,7 @@
                 }
             ]
         },
-        // NOVO MÓDULO ADICIONADO AQUI
+        // MÓDULO CORRIGIDO/CONFIRMADO: Beginner 9 (Números 21-99)
         {
             id: 9,
             lessonTitle: "Beginner 9: Numbers 21-99",
@@ -1135,18 +1135,17 @@
                     tableData: [
                         { sentence: "21", translation: "Twenty-one" },
                         { sentence: "32", translation: "Thirty-two" },
-                        { sentence: "43", translation: "Forty-three" }, // Corrigido
+                        { sentence: "43", translation: "Forty-three" },
                         { sentence: "54", translation: "Fifty-four" },
                         { sentence: "65", translation: "Sixty-five" },
                         { sentence: "76", translation: "Seventy-six" },
                         { sentence: "87", translation: "Eighty-seven" },
                         { sentence: "98", translation: "Ninety-eight" }
                     ],
-                    tableType: "number-modal" // Reusa o estilo de tabela clicável para números
+                    tableType: "number-modal"
                 }
             ]
         }
-        // FIM DO NOVO MÓDULO
     ];
 
     // --- VARIÁVEIS DE ESTADO ---
